@@ -10,13 +10,10 @@
 -XX:+UseG1GC
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
--XX:+CMSClassUnloadingEnabled
--XX:+AggressiveOpts
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
 -XX:ReservedCodeCacheSize=150M
 -DHADOOP_USER_NAME=hive
 -Duser.timezone=Asia/Kathmandu
--Xdebug 
--Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+#-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 -XX:ErrorFile=/docker/volumes/logs/product-tests-presto-jvm-error-file.log
